--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
 body{
-    background-color: aqua;
+    background-color: rgb(205, 233, 233);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.header{
+    /* margin: auto;
+    width: 50%;
+    padding: 10px; */
+    text-align: center;
+
+}
+
+.headerLinks{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+    
+}
+.headerLink{
+    float: left;
+}
+
+.headerLink a{
+    display: block;
+    color: blanchedalmond;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+.headerLink a:hover {
+    background-color: #111111;
+  }
